# Smarthome_dialogue_manager

./: .gitignore  .mailmap  .pre-commit-config.yaml  Makefile  README.md  debug_expiration.py  debug_you_are_who.py  device_manager_test_analysis.md  dialogue_system_improvement_guide.md  dialogue_system_optimization_plan.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.py  setup.cfg  test_pronoun_offline.py
.github/workflows/: ci.yml  test.yml
data/: dialogues.db
dialogue_manager/: __init__.py  api_client.py  clarification.py  device_manager.py  engine.py  intent.py  logger.py  memory.py
docs/: FINAL_PRODUCT_TECH_PLAN.md  LOGGING_GUIDE.md  LOG_SYSTEM_SUMMARY.md  NEXT_STEPS_GUIDE.md  SEMANTIC_COVERAGE_TESTING_GUIDE.md  TESTING_API_GUIDE.md  Test_Case_Assessment.md  dialogue_system_improvement_guide.md
scripts/: debug_device_patterns.py  debug_failure_cases.py  debug_focus.py  debug_focus_expiration.py  debug_intent.py  debug_logs.py  demo_semantic_coverage.py  test_enhanced_clarification.py  test_logging.py  test_pronoun_detection.py
tests/: .api_key  README.md  config.py  conftest.py  fixtures.py  test_device_manager.py  test_device_manager_enhanced.py  test_dialogue_focus.py  test_edge_cases_p0.py  test_entity_fix.py  test_focus_switching_strategies.py  test_omission_resolution.py  test_real_device_manager.py  test_real_dialogue.py  test_real_edge_cases.py  test_real_focus_and_omission.py  test_real_integration.py  test_real_unit.py  test_semantic_coverage_cases.py  test_unit.py
tests/config/: .gitignore
ui/: app.py
